# iai_kinect2

./: .gitignore  README.md
camera_calibration/: CMakeLists.txt  README.md  package.xml
camera_calibration/include/: camera_calibration_definitions.h
camera_calibration/src/: camera_calibration.cpp
depth_registration/: CMakeLists.txt  README.md  package.xml
depth_registration/include/: depth_registration.h
depth_registration/src/: depth_registration.cl  depth_registration.cpp  depth_registration_cpu.cpp  depth_registration_cpu.h  depth_registration_opencl.cpp  depth_registration_opencl.h
https/github.com/therealcurlsport/: selenium.diff.patch.roslyn
iai_kinect2/: package.xml
kinect2_bridge/: CMakeLists.txt  README.md  package.xml
kinect2_bridge/data/001530565347/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2_bridge/data/002061565347/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2_bridge/data/004429261047/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2_bridge/data/017436750747/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2_bridge/data/155954635247/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2_bridge/data/196605135147/: calib_color.yaml  calib_ir.yaml  calib_pose.yaml
kinect2_bridge/data/307004735147/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  (+1 more)
kinect2_bridge/include/: kinect2_definitions.h  kinect2_definitions.h.autosave
kinect2_bridge/launch/: kinect2_bridge.launch
kinect2_bridge/src/: kinect2_bridge.cpp  kinect2_registration.cpp
kinect2_calibration/: CMakeLists.txt  README.md  package.xml
kinect2_calibration/include/: kinect2_calibration_definitions.h
kinect2_calibration/src/: kinect2_calibration.cpp
kinect2_recorder/: CMakeLists.txt  README.md  package.xml
kinect2_recorder/src/: processor.cpp  recorder.cpp
kinect2_registration/: CMakeLists.txt  README.md
kinect2_registration/include/: kinect2_registration.h
kinect2_registration/src/: depth_registration.cl  depth_registration_cpu.cpp  depth_registration_cpu.h  depth_registration_opencl.cpp  depth_registration_opencl.h  kinect2_registration.cpp
kinect2_viewer/: CMakeLists.txt  README.md  package.xml
kinect2_viewer/src/: viewer.cpp
registration_viewer/: CMakeLists.txt  README.md  package.xml
registration_viewer/src/: viewer.cpp
(+7 files in other folders)
