<?xml version="1.0"?>
<package>
  <name>depth_registration</name>
  <version>0.0.1</version>
  <description>The depth_registration package</description>

  <maintainer email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
